--- a/web/package.json
+++ b/web/package.json
@@ -2,7 +2,7 @@
   "name": "web",
   "version": "1.0.0",
   "description": "hanium project",
-  "main": "index.js",
+  "main": "main.js",
   "dependencies": {
     "body-parser": "^1.19.0",
     "ejs": "^3.1.3",
