--- a/newweb/package.json
+++ b/newweb/package.json
@@ -9,7 +9,9 @@
     "css-animation": "^2.0.4",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
+    "node-audiorecorder": "^2.2.0",
     "node-mysql": "^0.4.2",
+    "python-shell": "^2.0.1",
     "supervisor": "^0.12.0"
   },
   "devDependencies": {},
