--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,38 @@
-beautifulsoup4==4.9.1
 cachetools==4.1.1
 certifi==2020.6.20
+cffi==1.14.1
 chardet==3.0.4
-google==3.0.0
 google-api-core==1.22.0
 google-api-python-client==1.10.0
-google-auth==1.20.0
+google-auth==1.20.1
 google-auth-httplib2==0.0.4
+google-cloud==0.34.0
+google-cloud-bigquery==1.26.1
+google-cloud-core==1.4.1
 google-cloud-speech==1.3.2
+google-cloud-storage==1.30.0
+google-crc32c==0.1.0
+google-resumable-media==0.7.1
 googleapis-common-protos==1.52.0
-grpcio==1.30.0
+grpcio==1.31.0
 httplib2==0.18.1
 idna==2.10
 joblib==0.16.0
-krwordrank==1.0.3
 numpy==1.19.1
 pkg-resources==0.0.0
 protobuf==3.12.4
+psutil==5.7.2
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+PyAudio==0.2.11
+pycparser==2.20
 pytz==2020.1
 requests==2.24.0
 rsa==4.6
-scikit-learn==0.23.1
+scikit-learn==0.23.2
 scipy==1.5.2
 six==1.15.0
-soupsieve==2.0.1
+soynlp==0.0.493
 threadpoolctl==2.1.0
 uritemplate==3.0.1
 urllib3==1.25.10
