--- a/newweb/package.json
+++ b/newweb/package.json
@@ -9,6 +9,7 @@
     "css-animation": "^2.0.4",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
+    "multer": "^1.4.2",
     "node-audiorecorder": "^2.2.0",
     "node-mysql": "^0.4.2",
     "python-shell": "^2.0.1",
